yaml files/mountPV.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app-pod
spec:
  containers:
    - name: my-container
      image: nginx
      volumeMounts:
        - mountPath: "/usr/share/nginx/html" # The path inside the container
          name: app-storage
  volumes:
    - name: app-storage
      persistentVolumeClaim:
        claimName: task-pvc-claim # Reference the PVC name here
